Improve project structure

--- a/.gitignore
+++ b/.gitignore
@@ -2,19 +2,9 @@
 
 # Dependencies
 /node_modules
-/.pnp
-.pnp.js
-
-# Testing
-/coverage
-__snapshots__/
-
-# Next.js
-/.next/
-/out/
 
 # Production
-/build
+/dist
 
 # Misc
 .DS_Store
