--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "build": "webpack"
   },
   "dependencies": {
-    "three": "^0.132.2",
-    "stats.js": "^0.17.0"
+    "stats.js": "^0.17.0",
+    "three": "^0.132.2"
   },
   "devDependencies": {
     "browser-sync": "^2.27.5",
     "browser-sync-webpack-plugin": "^2.3.0",
+    "copy-webpack-plugin": "^9.0.1",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.54.0",
     "webpack-cli": "^4.8.0"
